--- a/products.html
+++ b/products.html
@@ -20,6 +20,7 @@
                     <li><a href="contact.html">Contato</a></li>
                     <li><a href="about.html">Sobre Nós</a></li>
                     <li><a href="terms.html">Termos e Condições</a></li>
+                    <li><a href="cart.html">Carrinho</a></li>
                 </ul>
             </nav>
             <div class="search">
